# Commonality

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/auth/: dependencies.py  models.py  router.py  service.py
backend/app/chat/: models.py  router.py  service.py  websocket.py
backend/app/db/: dynamo.py  redis.py
backend/app/voice/: models.py  router.py  service.py  signals.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_voice.py  test_voice_signals.py  test_voice_walkie_talkie.py
docs/: PRD.md  commonality_prd.md  deploymentPlan.md  mvpPlan.md  phasedPlan.md
docs/plans/: 2026-02-25-walkie-talkie-implementation.md  2026-02-25-walkie-talkie-voice-translation-design.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/chat/[chatId]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/voice/[roomId]/: page.tsx
frontend/src/components/: ChatInput.tsx  ChatList.tsx  ChatMessage.tsx  Logo.tsx  Navbar.tsx  VoiceRoom.tsx  WaveformVisualizer.tsx
frontend/src/components/ui/: alert.tsx  button.tsx  card.tsx  input.tsx  select.tsx
frontend/src/hooks/: useAuth.ts  useWalkieTalkie.ts  useWebSocket.ts
frontend/src/lib/: api.ts  ws.ts
frontend/src/types/: index.ts
nginx/: default.conf
scripts/: ngrok-update-env.sh
